@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Moneris: add scrubbing support [bruno]
 * Litle: add scrubbing support [bruno]
 * Sage: Add support for scrubbing [bruno]
 * Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
